03/12/2009: Version 0.9.8 Released


02/12/2009:
	- Adding missing include to IIPImage.cc for compilation with
	  gcc 4.4.1


01/12/2009:
	- Added DeepZoom protocol support. Work carried out thanks to
	  Moravian Library in Brno (Moravska zemska knihovna v Brne,
	  http://www.mzk.cz/) R&D grant MK00009494301 & Old Maps Online
	  (http://www.oldmapsonline.org/) from the Ministry of Culture of
	  the Czech Republic.


29/11/2009:
	- Added SPECTRA.cc class for returning spectral reflectance values
	  from multispectral images.
	- Fix to IIPImage.cc to properly count the number of horizontal and
	  vertical angles (used for multispectral bands).


26/11/2009:
	- Fix to View class to take resampling into account when limiting
	  the CVT output size to the maximum server setting.


17/11/2009:
	- Update to Zoomify to fix way it calculates number of zoom levels.


05/11/2009:
	- Updated the autoconf, aclocal, automake and libtool scripts to the 
	  latest versions.


04/11/2009:
	- Added FILESYSTEM_PREFIX environment variable to allow a fixed prefix to
	  be applied to all image paths. Embedded NULL bytes of the form %00 and
	  any "../" are also now stripped out of any path for security reasons.
          (Thanks to Willem Hengeveld for suggesting this)


01/11/2009:
	- Fixes to View.h and View.cc to set the requested size to the maximum
	  allowable if not WID or HEI is set for the CVT command. The correct
	  resolution to use for CVT is now calculated for views smaller than
	  the smallest available.


30/10/2009:
	- Security fixes to Task.cc to make sure while loop is limited to the
	  expected number of arguments. (Thanks to Willem Hengeveld for pointing
	  this out).
	

19/08/2009:
	- Minor updates to IIPImage.h and IIPImage.cc. FIF.cc also now tests
	  for upper/lowercase .tif and .tiff suffixes.


14/08/2009:
	- Modification to View.cc and CVT.cc to calculate the appropriate
	  resolution as the smallest resolution with a dimension greater size