@@ -1,3 +1,8 @@
+04/01/2010:
+	- Fixed bug in FIF.cc - the file system prefix was not being
+	  initialized for each new image.
+
+
 03/12/2009: Version 0.9.8 Released
 
 
